--- a/public/css/styles2.css
+++ b/public/css/styles2.css
@@ -1,7 +1,6 @@
 html {
   background-color: #ddd;
-  /* background-image: -webkit-linear-gradient(65deg, #A683E3 50%, #E4E9FD 50%); */
-  min-height: 1000px;
+  /* min-height: 800px; */
   font-family: 'helvetica neue';
 }
 
@@ -19,7 +18,7 @@ h1 {
 }
 
 #heading {
-  background-color: rgb(65, 87, 229);
+  background-color: rgb(161, 4, 4);
   text-align: center;
 }
 
@@ -45,10 +44,10 @@ input[type="checkbox"] {
 
 p {
   margin: 0;
-  padding: 15px;
-  font-size: 20px;
-  font-weight: 200;
-  color: #00204a;
+  padding: 5px;
+  font-size: 1.2em;
+  font-weight: 400;
+  color: #5281c0;
 }
 
 form.item {
