--- a/public/css/styles2.css
+++ b/public/css/styles2.css
@@ -1,7 +1,7 @@
 html {
   background-color: #ddd;
   /* min-height: 800px; */
-  font-family: 'helvetica neue';
+  font-family: "helvetica neue";
 }
 
 h1 {
@@ -18,7 +18,7 @@ h1 {
 }
 
 #heading {
-  background-color: rgb(161, 4, 4);
+  background-color: rgb(51, 114, 224);
   text-align: center;
 }
 
@@ -26,14 +26,14 @@ h1 {
   min-height: 50px;
   display: flex;
   align-items: center;
-  border-bottom: 1px solid #F1F1F1;
+  border-bottom: 1px solid #f1f1f1;
 }
 
 .item:last-child {
   border-bottom: 0;
 }
 
-input:checked+p {
+input:checked + p {
   text-decoration: line-through;
   text-decoration-color: rgb(65, 87, 229);
 }
